Update bot username in index.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         const db = firebase.firestore();
         const tg = window.Telegram.WebApp;
         const user = tg.initDataUnsafe.user || { id: 8021307643, first_name: "A S H", photo_url: "" };
-        const BOT_USER = "YOUR_BOT_USERNAME"; // Replace with your bot username
+        const BOT_USER = "TestRexKaBot"; // Replace with your bot username
 
         let userData = {};
 
